[package]
name = "yubigen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yubikey = "0.8.0" 
fastcrypto = "0.1.7"
sui-types = {git = "https://github.com/MystenLabs/sui", branch="main" }
shared-crypto = {git = "https://github.com/MystenLabs/sui", branch="main" }
anyhow = "1.0.79"
bcs = "0.1.6"
p256 = "0.13.2"
clap = "4.4.18"
tracing = "0.1.40"
zeroize = "1.7.0"
